--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: "Poetsen One", sans-serif;
+      
     /* background-color: #e4dbdb; */
 }
 span{
@@ -11,7 +13,7 @@ span{
 
 .navbar{
     width: 100%;
-    height: 70px;
+    height: 90px;
     display: inline-flex;
     justify-content: space-around;
     align-items: center;
@@ -19,14 +21,18 @@ span{
     /* position: top; */
     z-index: 1;
     position: fixed;
-    background-color: antiquewhite;
+    background-color: navy;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0,0.5);
+    border-radius: 8px;
 
 }
-.logo a{
-    color: rgb(11, 11, 106);
-    float: left;
-    text-decoration: none;
-    /* margin: 20px; */
+.logo{
+    margin-top: 5px;
+
+}
+.logo img{
+    height: 27%;
+    width: 27%;
 }
 
 .menu-items{
@@ -41,6 +47,7 @@ span{
 }
 .menu-items li{
     padding: 7px;
+    color: white;
 }
 .menu-items li:hover{
     color: red;
@@ -51,10 +58,10 @@ span{
 
 .hire-us button{
     text-decoration: none;
-    color: white;
+    color: black;
     cursor: pointer;
     float: right;
-    background-color: rgb(20, 9, 9);
+    background-color: white;
     height: 30px;
     width: 80px;
     justify-content: center;
@@ -63,18 +70,44 @@ span{
 
 .hire-us button:hover{
     border: 1px solid black;
-    color: black;
-    background-color: white;
-    transition: .5s;
+    font-weight: bolder;
+    color: white;
+    background-color: black;
+    transition: .8s;
 }
+
+@media screen and (max-width: 600px) {
+  .navbar li:not(:first-child) {display: none;}
+  .navbar a.icon {
+    float: left;
+    display: block;
+  } 
+}
+
+@media screen and (max-width: 600px) {
+  .navbar.responsive {position: relative;}
+  .navbar.navbar.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .navbar.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+
 section.home{
     width: 100%;
     height: 100vh;
+    overflow-y: scroll;
+    /* background-image: url("/images/print2.jpg"); */
     /* background-color: blue; */
 }
 
 .home-container{
-    background-color: aqua;
+    /* background-color: aqua; */
     /* color: rgb(188, 11, 11); */
     align-content: center;
     /* margin-top: 72px; */
@@ -84,13 +117,133 @@ section.home{
     overflow: hidden;
     justify-content: center;
     text-align: center;
+    background-image: url("/images/print4.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+
     /* opacity: 0.1; */
+    
+}
+.home-container h1, p{
+    -webkit-animation: bounce-top 0.9s both;
+	        animation: bounce-top 0.9s both;
 
 }
+
+@-webkit-keyframes bounce-top {
+    0% {
+      -webkit-transform: translateY(-45px);
+              transform: translateY(-45px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+      opacity: 1;
+    }
+    24% {
+      opacity: 1;
+    }
+    40% {
+      -webkit-transform: translateY(-24px);
+              transform: translateY(-24px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    65% {
+      -webkit-transform: translateY(-12px);
+              transform: translateY(-12px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    82% {
+      -webkit-transform: translateY(-6px);
+              transform: translateY(-6px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    93% {
+      -webkit-transform: translateY(-4px);
+              transform: translateY(-4px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    25%,
+    55%,
+    75%,
+    87% {
+      -webkit-transform: translateY(0px);
+              transform: translateY(0px);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    100% {
+      -webkit-transform: translateY(0px);
+              transform: translateY(0px);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      opacity: 1;
+    }
+  }
+  @keyframes bounce-top {
+    0% {
+      -webkit-transform: translateY(-45px);
+              transform: translateY(-45px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+      opacity: 1;
+    }
+    24% {
+      opacity: 1;
+    }
+    40% {
+      -webkit-transform: translateY(-24px);
+              transform: translateY(-24px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    65% {
+      -webkit-transform: translateY(-12px);
+              transform: translateY(-12px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    82% {
+      -webkit-transform: translateY(-6px);
+              transform: translateY(-6px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    93% {
+      -webkit-transform: translateY(-4px);
+              transform: translateY(-4px);
+      -webkit-animation-timing-function: ease-in;
+              animation-timing-function: ease-in;
+    }
+    25%,
+    55%,
+    75%,
+    87% {
+      -webkit-transform: translateY(0px);
+              transform: translateY(0px);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+    }
+    100% {
+      -webkit-transform: translateY(0px);
+              transform: translateY(0px);
+      -webkit-animation-timing-function: ease-out;
+              animation-timing-function: ease-out;
+      opacity: 1;
+    }
+  }
+  
+
 .home-container h1{
-    font-size: 50px;
-    color: rgb(20, 8, 8);
+    font-size: 80px;
+    color: black;
     opacity: 1;
+}
+.home-container p{
+    font-size: 25px;
 }
 .home-hirebtn{
     height: 50px;
@@ -111,7 +264,7 @@ section.home{
 .home-works{
     height: 50px;
     width: 90px;
-    background: transparent;
+    background: white;
     color: black;
     font-weight: bolder;
     border-radius: 18px;
@@ -126,21 +279,74 @@ section.home{
 
 section.services{
     width: inherit;
-    height: 93vh;
-    background-color: red;
+    padding: 15px 9%;
+    padding-bottom: 100px;
+    height: 100vh;
+    background-color: rgb(116, 98, 98);
     text-align: center;
+    overflow-y: scroll;
     
 }
-section.services h1{
-    margin-top: 72px;
+.services .heading{
+    text-align: center;
+    /* padding-top: 50px; */
+    padding-bottom: 15px;
+    color: #fff;
+    text-shadow: 0 5px 10px rgba(0,0,0,0.2);
+    font-size: 50px;
 }
 
-.card{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0,0.2);
-    transition: 0.3s;
+.services .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    gap: 15px;
+
+}
+
+.services .box-container .box{
+    height: fit-content;
+    box-shadow: 0 5px 10px rgba(0,0,0,0.2);
     border-radius: 5px;
+    background: #fff;
+    text-align: center;
+    padding: 20px 20px;
+}
+.services .box-container .box img{
+    height: 80px;
+
+}
+.services .box-container .box h3{
+  color: #444;
+  font-size: 22px;
+  padding: 10px 0;
+}
+.services .box-container .box p{
+  color: #777;
+  font-size: 15px;
+  line-height: 1.8;
 }
 
+.services .box-container .box .readbtn{
+  margin-top: 10px;
+  display: inline-block;
+  background: #333;
+  color: #fff;
+  border-radius: 5px;
+  padding: 8px 25px;
+}
+.services .box-container .box .readbtn:hover{
+  letter-spacing: 1px;
+}
+.services .box-container .box:hover{
+  box-shadow: 0 10px 15px rgba(0,0,0,0.4);
+  transform: scale(1.02);
+}
+
+@media (max-width:768px){
+  .services{
+    padding: 20px;
+  }
+}
 section.gallery{
     width: inherit;
     height: 100vh;
